--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,13 @@ jobs:
       - uses: actions/setup-node@v2
         name: Setup nodejs 14
         with:
-          node-version: '14'    
+          node-version: '14'
+          
+      - name: Install node packages
+        run: |
+          npm install
+          npm install -g testcafe
+          npm install -g allure-commandline
 
       # Runs a set of commands using the runners shell
       - name: Run Test Cases
