--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,11 +70,9 @@ jobs:
 
       - name: Push Docker Image to GitHub packaging
         uses: mr-smithers-excellent/docker-build-push@v5
-        env:
-          VERSION: $(date +%s)
         with:
-          image: ghcr.io/${{ github.actor }}/testcafe-ci
-          tags: latest, ${VERSION}
+          image: testcafe-ci
+          tags: latest, ${{github.run_id}}
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }} 
